// protos/order.proto
syntax = "proto3";

package order;

message RequestedProduct {
  int32 id = 1;
  int32 requestedQuantity = 2;
}

message Product {
  int32 id = 1;
  string name = 2;
  string description = 3;
  int32 requestedQuantity = 4;
  float price = 5;
}

message CreateOrderRequest {
  repeated RequestedProduct products = 1;
}

message CreateOrderResponse {
  int32 id = 1;
  string status = 2;
}

message Order {
  int32 id = 1;
  string status = 2;
  repeated Product products = 3;
}

message ListAllResponse {
  repeated Order orders = 1;
}

message Empty {}

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
  rpc ListAll (Empty) returns (ListAllResponse);
}